# protoPen

./: .automaker-lock  .coderabbit.yaml  .dockerignore  .gitignore  Dockerfile  README.md  STATUS.md  a2a_auth.py  a2a_executor.py  a2a_handler.py  a2a_stores.py  audit.py  chat_ui.py  discord_bot.py  docker-compose.yml  entrypoint.sh  guardrails.py  metrics.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_playbook.py  server.py  sitrep.py  start.sh  tracing.py
.beads/: .gitignore  config.yaml  issues.jsonl
.plans/: 2026-04-12-output-parsers.md  2026-04-12-pentest-tools-scaffold.md  2026-04-12-target-intelligence-data-model.md
.proto/: repo-map-cache.json  session-notes.md
config/: SOUL.md  cliproxy-config.yaml  engagement-config.json  langgraph-config.yaml  security-config.json
deck/: Containerfile  bootstrap.sh  entrypoint.sh  install-deck-launcher.sh  install.sh  protopen-kiosk.sh  protopen-runtime-run.sh  protopen-runtime.service  protopen.desktop  run.sh  steam-art.sh  steam-shortcut.py
docs/: index.md  steam-deck-setup.md
enforcement/: __init__.py  phases.py  rate_limiter.py  scope.py
evals/: compare.py  run_eval.sh  runner.py  tasks.json
events/: __init__.py  bus.py  sse.py
graph/: agent.py  background.py  checkpoint_prune.py  checkpointer.py  config.py  delegations.py  hitl_context.py  knobs.py  llm.py  memory_facts.py  prompts.py  sdk.py  state.py  steering.py  supervisor.py  telemetry.py
handoffs/: 001-phase5-integration.md  002-goals-autonomy-layer.md  003-personal-osint.md  004-companion-ui-streaming-terminal.md
(+499 files in other folders)
