[project]
name = "protopen"
version = "2.0.23"
description = "Autonomous pen testing and security intelligence agent"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# E5xx = line length (long cmd strings in security tools are intentional)
# F401 = unused imports (many tool imports are conditional / dynamic)
# F841 = unused variables (subprocess captures, mock assignments in tests)
# E741 = ambiguous variable names (l, I, O common in tight loops / nmap parsing)
# E402 = module not at top (conditional imports in some tools)
ignore = ["E501", "F401", "F841", "E741", "E402", "E701"]
select = ["E", "F", "W"]

# Per-file ignores for test files
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F811", "F401", "E731"]
"tools/parsers/__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
